--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Hide n' Seek",
   "description": "View the jobs you seek. Hide the ones you don't.",
-  "version": "1.0",
+  "version": "1.0.0",
   "icons": {
     "16": "/images/hide-n-seek-icon-16.png",
     "32": "/images/hide-n-seek-icon-32.png",
@@ -10,10 +10,7 @@
     "128": "/images/hide-n-seek-icon-128.png"
   },
   "permissions": ["scripting", "storage", "tabs"],
-  "host_permissions": [
-    "https://*.linkedin.com/*",
-    "https://*.indeed.com/*"
-  ],
+  "host_permissions": ["https://*.linkedin.com/*", "https://*.indeed.com/*"],
   "action": {
     "default_title": "Hide n' Seek",
     "default_popup": "/popup/html/popup.html",
