--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Hide n' Seek",
-  "description": "View the jobs you seek. Hide the ones you don't.",
+  "description": "View the jobs you seek. Hide the ones you don't. Easily hide promoted jobs and companies on LinkedIn and Indeed.",
   "version": "4.2.3",
   "icons": {
     "16": "/images/hide-n-seek-icon-16.png",
