Refactor and add Glassdoor and Firefox Support
(1) Added support for the Glassdoor.com job board

(2) Added support for Firefox

(3) Most assets were refactored, but especially content-script.js

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "Hide n' Seek: Hide Promoted Jobs & Companies",
   "short_name": "Hide n' Seek",
-  "description": "View the jobs you seek. Hide the ones you don't. Easily hide promoted jobs and companies on LinkedIn and Indeed.",
-  "version": "4.2.8",
+  "description": "View the jobs you seek. Hide the ones you don't. Easily hide promoted jobs and companies on LinkedIn, Indeed, and Glassdoor.",
+  "version": "4.3",
   "icons": {
     "16": "/images/hide-n-seek-icon-16.png",
     "32": "/images/hide-n-seek-icon-32.png",
@@ -23,7 +23,11 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.linkedin.com/*", "https://*.indeed.com/*"],
+      "matches": [
+        "https://*.glassdoor.com/*",
+        "https://*.indeed.com/*",
+        "https://*.linkedin.com/*"
+      ],
       "css": ["/content-script/css/content-script.css"],
       "js": ["/content-script/js/content-script.js"]
     }
@@ -34,7 +38,11 @@
   "web_accessible_resources": [
     {
       "resources": ["/images/hide-button-icon.svg"],
-      "matches": ["https://*.linkedin.com/*", "https://*.indeed.com/*"]
+      "matches": [
+        "https://*.glassdoor.com/*",
+        "https://*.indeed.com/*",
+        "https://*.linkedin.com/*"
+      ]
     }
   ]
 }
