--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -33,6 +33,7 @@
     }
   ],
   "background": {
-    "service_worker": "/background/js/background.js"
+    "service_worker": "/background/js/background.js",
+    "type": "module"
   }
 }
