--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -29,7 +29,7 @@
         "https://*.linkedin.com/*"
       ],
       "css": ["/content-script/css/content-script.css"],
-      "js": ["/content-script/js/content-script.js"]
+      "js": ["/content-script/js/ui.js", "/content-script/js/content-script.js"]
     }
   ],
   "background": {
