--- a/other-manifests/firefox/manifest.json
+++ b/other-manifests/firefox/manifest.json
@@ -13,7 +13,7 @@
   "permissions": ["storage", "tabs"],
   "action": {
     "default_title": "Hide n' Seek",
-    "default_popup": "/popup/html/popup.html",
+    "default_popup": "/popup/popup.html",
     "default_icon": {
       "16": "/images/hide-n-seek-icon-16.png",
       "32": "/images/hide-n-seek-icon-32.png",
@@ -28,12 +28,12 @@
         "https://*.indeed.com/*",
         "https://*.linkedin.com/*"
       ],
-      "css": ["/content-script/css/content-script.css"],
-      "js": ["/content-script/js/content-script.js"]
+      "css": ["/content/content.css"],
+      "js": ["/content/content.js"]
     }
   ],
   "background": {
-    "scripts": ["/background/js/background.js"]
+    "scripts": ["/background/background.js"]
   },
   "browser_specific_settings": {
     "gecko": {
