--- a/other-manifests/firefox/manifest.json
+++ b/other-manifests/firefox/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "Hide n' Seek: Hide Promoted Jobs & Companies",
   "short_name": "Hide n' Seek",
-  "description": "View the jobs you seek. Hide the ones you don't. Easily hide promoted jobs and companies on LinkedIn, Indeed, and Glassdoor.",
-  "version": "5.1.3",
+  "description": "View the jobs you seek. Hide the ones you don't. Easily hide promoted jobs, companies, and more on LinkedIn, Indeed, and Glassdoor.",
+  "version": "6.0.0",
   "icons": {
     "16": "/images/hide-n-seek-icon-16.png",
     "32": "/images/hide-n-seek-icon-32.png",
